# 4_sem_2

./: CMakeLists.txt  Doxyfile  README.md
Client/: client.cpp
Methods/: mainMethod.cpp
Server/: server.cpp
Tests/: tests.cpp
